clusters/beryjuio-prod/istio-system/gw-oxidized.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryju-io-gw-oxidized
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryju-io-authentik-proxy-infra
      hosts:
        - oxidized.lab.beryju.io
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - oxidized.lab.beryju.io
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryju-io-vs-oxidized
  namespace: istio-system
spec:
  gateways:
    - beryju-io-gw-oxidized
  hosts:
    - oxidized.lab.beryju.io
  http:
    - route:
        - destination:
            port:
              number: 8888
            host: oxidized.oxidized.svc.cluster.local
