clusters/beryjuio-prod/istio-system/gw-radarr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryju-io-gw-dl-stack-radarr
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryju-io-authentik-proxy-infra
      hosts:
        - radarr-dl-stack.lab.beryju.io
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - radarr-dl-stack.lab.beryju.io
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryju-io-vs-dl-stack-radarr
  namespace: istio-system
spec:
  gateways:
    - beryju-io-gw-dl-stack-radarr
  hosts:
    - radarr-dl-stack.lab.beryju.io
  http:
    - route:
        - destination:
            port:
              number: 7878
            host: radarr.dl-stack.svc.cluster.local
