clusters/beryjuio-prod/istio-system/passthrough-sentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: beryju-io-gw-sentry
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: beryju-io-sentry
      hosts:
        - sentry.beryju.org
        - sentry.beryju.io
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - sentry.beryju.org
        - sentry.beryju.io
      tls:
        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: beryjuorg-se-sentry
  namespace: istio-system
spec:
  hosts:
    - sentry1.prod.beryju.io
  location: MESH_EXTERNAL
  ports:
    - number: 9000
      name: http
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryju-io-vs-sentry
  namespace: istio-system
spec:
  gateways:
    - beryju-io-gw-sentry
  hosts:
    - sentry.beryju.org
    - sentry.beryju.io
  http:
    - route:
        - destination:
            port:
              number: 9000
            host: sentry1.prod.beryju.io
