clusters/beryjuio-prod/istio-system/authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authentik-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: "authentik"
  rules:
    - to:
        - operation:
            hosts:
              - "*.infra.beryju.org"
              - "*.lab.beryju.io"
            notHosts:
              - grafana.lab.beryju.io
              - unifi.infra.beryju.org
              - mimir.infra.beryju.org
              - loki.infra.beryju.org
